# rules_deno

./: BUILD.bazel  README.md  WORKSPACE  def.bzl  deps.bzl
internal/: BUILD.bazel  BUILD.dist.bazel.tpl  actions.bzl  providers.bzl  repo.bzl  rules.bzl  toolchain.bzl
tests/: BUILD.bazel  equals.sh  hello-world.js  hello_test.sh  test.bzl
tests/hello-world/: BUILD.bazel
tests/hello-world-ts/: BUILD.bazel
tests/import-map/: BUILD.bazel  import_map.json  index.ts
tests/local-import/: BUILD.bazel  dep.js  index.js
tests/permissions/: BUILD.bazel  index.ts
tools/: BUILD.bazel  update-deno-downloads.js
