load(":test.bzl", "equals")

equals(
    name = "hello_test",
    target = "//tests/hello-world:hello", 
    expectation = "Hello, world!"
)

equals(
    name = "local_imports_test",
    target = "//tests/local-import:hello_with_deps",
    expectation = "Hello, world!"
)

equals(
    name = "hello_typescript_test",
    target = "//tests/hello-world-ts:hello", 
    expectation = "Hello, world!"
)

equals(
    name = "import_map_test",
    target = "//tests/import-map:import_map", 
    expectation = "Hello, world!"
)

equals(
    name = "permissions_test",
    target = "//tests/permissions:permissions",
    expectation = "Hello, world!"
)