load("//:def.bzl", "deno_binary", "deno_library")

deno_library(
    name = "hello_with_deps_lib",
    srcs = [
        "dep.js"
    ]
)

deno_binary(
    name = "hello_with_deps",
    main = "index.js",
    deps = [
        "hello_with_deps_lib"
    ],
    visibility = [
        "//tests:__pkg__"
    ]
)