load("//:def.bzl", "deno_binary", "deno_library", "deno_app")

deno_library(
    name = "hello_with_deps_lib",
    srcs = [
        "dep.js"
    ]
)

deno_app(
    name = "hello_with_deps_app",
    main = "index.js",
    deps = [
        "hello_with_deps_lib"
    ],
)

deno_binary(
    name = "hello_with_deps",
    app  = ":hello_with_deps_app",
    visibility = [
        "//tests:__pkg__"
    ]
)