load("//:def.bzl", "deno_binary", "deno_app")

deno_binary(
    name = "permissions",
    app = ":permissions_app",
    visibility = [
        "//tests:__pkg__"
    ]
)

deno_app(
    name = "permissions_app",
    main = "index.ts",
    permissions = [
        "--allow-read",
        "--allow-write"
    ]
)